[package]
name = "rnpx"
description = "a faster runner for package.json scripts, think dash"
version = "0.1.1"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
overflow-checks = true
lto = "thin"


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
fs-err = "3.0.0"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"

