[package]
name = "rnpx"
version = "0.1.5"
edition = "2021"
description = "a faster runner for package.json scripts, think dash"
keywords = ["node", "javascript", "cli"]
categories = ["development-tools"]
homepage = "https://github.com/ultrabear/rnpx"
repository = "https://github.com/ultrabear/rnpx"
readme = "README.md"
license = "GPL-3.0"
rust-version = "1.74"

[profile.dev]
opt-level = 1

[profile.release]
overflow-checks = true
lto = "thin"


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
fs-err = "3.0.0"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"

